# TerminalGameFrame

./: CMakeLists.txt
BasicLibs/: CMakeLists.txt
BasicLibs/Core/include/: ConsoleCmd.h  Coord.h  Draw.h  GameThread.h  KString.h  Tiles.h  Types.h
BasicLibs/Core/src/: ConsoleCmd.cpp  GameThread.cpp  KString.cpp  Tiles.cpp
BasicLibs/Structure/include/: SafeQueue.h
GameFrame/: CMakeLists.txt
GameFrame/src/: main.cpp
Interfaces/: CMakeLists.txt
Interfaces/Frame/include/: Frame.h
Interfaces/Frame/src/: Frame.cpp
Key/: CMakeLists.txt
Key/include/: Key.h
Key/src/: Key.cpp
